--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 configurations {
+  all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging' //로그 의존성 제거
+    }
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
@@ -24,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	implementation 'org.json:json:20211205'
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
